--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Sample jenkins page</title>
+    <title>Document</title>
 </head>
+
 <body>
-    
+    <h2>Sample Jenkins page</h2>
 </body>
 </html>
